--- a/index.html
+++ b/index.html
@@ -6,9 +6,172 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Assignment2</title>
+    <script src="https://kit.fontawesome.com/3ef45b56b1.js" crossorigin="anonymous"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="styles/style.css">
 </head>
 
 <body>
+    <main>
+        <!-------------
+             top banner
+             ------------->
+        <header class="main-banner">
+            <div class="banner-container">
+                <div class="banner-section">
+                    <div class="banner-info">
+                        <h1>Conmebol <br> Copa America <br> 2021 </h1>
+                        <button class="link-button">
+                            <a target="_blank" href="https://www.google.com/">Watch Live <i
+                                    class="fas fa-arrow-right"></i></a>
+                        </button>
+                    </div>
+                    <div class="banner-img">
+                        <img src="images/banner.png" alt="">
+                    </div>
+                </div>
+            </div>
+
+        </header>
+        <!-- top players -->
+
+        <section class="players-container">
+            <div class="players">
+                <div class="player">
+                    <div class="player-banner">
+                        <img src="images/players/player-1.png" alt="">
+                    </div>
+                    <div class="player-details">
+                        <h3 class="player-title">Neymar Jr</h3>
+                        <p class="player-info">Neymar da Silva Santos Júnior, known as Neymar, is a Brazilian
+                            professional footballer who plays as a forward for Ligue 1 club Paris Saint-Germain and the
+                            Brazil national team</p>
+                    </div>
+                </div>
+                <div class="player">
+                    <div class="player-banner">
+                        <img src="images/players/player-2.png" alt="">
+                    </div>
+                    <div class="player-details">
+                        <h3 class="player-title">Lionel Messi</h3>
+                        <p class="player-info">Lionel Andrés Messi is an Argentine professional footballer who plays as
+                            a forward or an attacking midfielder and captains the Argentina national team. He is
+                            currently a free agent</p>
+                    </div>
+                </div>
+                <div class="player">
+                    <div class="player-banner">
+                        <img src="images/players/player-3.png" alt="">
+                    </div>
+                    <div class="player-details">
+                        <h3 class="player-title">Cristiano Ronaldo</h3>
+                        <p class="player-info">Born and raised in Madeira, Ronaldo began his senior club career playing
+                            for Sporting CP, before signing with Manchester United in 2003, aged 18. After winning the
+                            FA
+                        </p>
+                    </div>
+                </div>
+                <div class="player">
+                    <div class="player-banner">
+                        <img src="images/players/player-4.png" alt="">
+                    </div>
+                    <div class="player-details">
+                        <h3 class="player-title">aulo Dybala</h3>
+                        <p class="player-info">aulo Exequiel Dybala is an Argentine professional footballer who plays as
+                            a forward for Serie A club Juventus and the Argentina national team</p>
+                    </div>
+                </div>
+                <div class="player">
+                    <div class="player-banner">
+                        <img src="images/players/player-5.png" alt="">
+                    </div>
+                    <div class="player-details">
+                        <h3 class="player-title">Mesut Ozil </h3>
+                        <p class="player-info">Mesut Özil is a German professional footballer who plays as an attacking
+                            midfielder for Süper Lig club Fenerbahçe. Nicknamed "The Assist King"</p>
+                    </div>
+                </div>
+                <div class="player">
+                    <div class="player-banner">
+                        <img src="images/players/player-6.png" alt="">
+                    </div>
+                    <div class="player-details">
+                        <h3 class="player-title">Mauro Icardi </h3>
+                        <p class="player-info">Mauro Emanuel Icardi is an Argentine professional footballer who plays as
+                            a striker for Ligue 1 club Paris Saint-Germain and the Argentina national team.</p>
+                    </div>
+                </div>
+                <div class="player">
+                    <div class="player-banner">
+                        <img src="images/players/player-7.png" alt="">
+                    </div>
+                    <div class="player-details">
+                        <h3 class="player-title">Di Maria</h3>
+                        <p class="player-info">ngel Fabián Di María is an Argentine professional footballer who plays
+                            for Ligue 1 club Paris Saint-Germain and the Argentina national team. </p>
+                    </div>
+                </div>
+                <div class="player">
+                    <div class="player-banner">
+                        <img src="images/players/player-8.png" alt="">
+                    </div>
+                    <div class="player-details">
+                        <h3 class="player-title">Kylian Mbappé</h3>
+                        <p class="player-info">Kylian Mbappé Lottin is a French professional footballer who plays as a
+                            forward for Ligue 1 club Paris Saint-Germain</p>
+                    </div>
+                </div>
+                <div class="player">
+                    <div class="player-banner">
+                        <img src="images/players/player-9.png" alt="">
+                    </div>
+                    <div class="player-details">
+                        <h3 class="player-title">Mohamed Salah</h3>
+                        <p class="player-info">Mohamed Salah Hamed Mahrous Ghaly is an Egyptian professional footballer
+                            who plays as a forward for Premier League club Liverpool </p>
+                    </div>
+                </div>
+                <div class="player">
+                    <div class="player-banner">
+                        <img src="images/players/player-10.png" alt="">
+                    </div>
+                    <div class="player-details">
+                        <h3 class="player-title">Harry Kane</h3>
+                        <p class="player-info">Harry Edward Kane MBE is an English professional footballer who plays as
+                            a striker for Premier League club Tottenham Hotspur and captains the England national team
+                        </p>
+                    </div>
+                </div>
+                <div class="player">
+                    <div class="player-banner">
+                        <img src="images/players/player-11.png" alt="">
+                    </div>
+                    <div class="player-details">
+                        <h3 class="player-title">Kevin De Bruyne</h3>
+                        <p class="player-info">Kevin De Bruyne is a Belgian professional footballer who plays as a
+                            midfielder for Premier League club Manchester City,</p>
+                    </div>
+                </div>
+                <div class="player">
+                    <div class="player-banner">
+                        <img src="images/players/player-12.png" alt="">
+                    </div>
+                    <div class="player-details">
+                        <h3 class="player-title">Philippe Coutinho</h3>
+                        <p class="player-info">Philippe Coutinho Correia is a Brazilian professional footballer who
+                            plays as an attacking midfielder or winger for Spanish club Barcelona and the Brazil
+                            national team. </p>
+                    </div>
+                </div>
+
+            </div>
+
+        </section>
+
+
+    </main>
 
 </body>
 
