--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <div class="banner-container">
                 <div class="banner-section">
                     <div class="banner-info">
-                        <h1>Conmebol <br> Copa America <br> 2021 </h1>
+                        <h1 class="details">Conmebol <br> Copa America <br> 2021 </h1>
                         <button class="link-button">
                             <a target="_blank" href="https://www.google.com/">Watch Live <i
                                     class="fas fa-arrow-right"></i></a>
