--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                     <div class="banner-info">
                         <h1 class="details">Conmebol <br> Copa America <br> 2021 </h1>
                         <button class="link-button">
-                            <a target="_blank" href="https://www.google.com/">Watch Live <i
+                            <a class="link" target="_blank" href="https://www.google.com/">Watch Live <i
                                     class="fas fa-arrow-right"></i></a>
                         </button>
                     </div>
